@@ -3,6 +3,7 @@
 - In split view there will be progress bars for each side!
 - Changed "Clear all history" to just "Clear", much better!
 - Return of theme Blue!
+- The URL Bar will change to "Loading" when a page is being loaded, and will show a placeholder URL/Search when no text is entered
 - Added a mechanism to get urgent alerts from uApps
 - Added a domain checker, this means more urls (e.g .xyz) is recognized as a web address instead of being google searched.
 - Snow is now more performant
